--- a/src/Main_prog.ipynb
+++ b/src/Main_prog.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 76,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-04T00:58:24.517199Z",
-     "start_time": "2018-10-04T00:58:24.500003Z"
+     "end_time": "2018-10-04T21:24:44.944258Z",
+     "start_time": "2018-10-04T21:24:44.921976Z"
     }
    },
    "outputs": [],
@@ -85,11 +85,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 77,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-02T06:02:25.531735Z",
-     "start_time": "2018-10-02T06:02:25.517853Z"
+     "end_time": "2018-10-04T21:24:50.591095Z",
+     "start_time": "2018-10-04T21:24:50.569110Z"
     }
    },
    "outputs": [],
@@ -135,14 +135,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 78,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-02T00:40:51.048116Z",
-     "start_time": "2018-10-02T00:40:51.032115Z"
+     "end_time": "2018-10-04T21:24:54.066450Z",
+     "start_time": "2018-10-04T21:24:54.035777Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'gen_active_url_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-78-251ab387a652>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mactive_zip_url_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgen_active_url_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'full_address'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'home_link'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mactive_zip_url_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mproxies\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlinks_for_active_props\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproxies\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mactive_zip_url_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mua\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# for url in df['home_link']:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#     active_df = each_property(url, header, proxy)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'gen_active_url_list' is not defined"
+     ]
+    }
+   ],
    "source": [
     "active_zip_url_list = gen_active_url_list(zip_)\n",
     "df = pd.DataFrame(columns=['full_address', 'home_link'])\n",
@@ -154,14 +166,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 85,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-04T00:05:27.725219Z",
-     "start_time": "2018-10-04T00:05:27.709316Z"
+     "end_time": "2018-10-04T21:42:53.738907Z",
+     "start_time": "2018-10-04T21:42:53.719429Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "world , i'm a beginner \n"
+     ]
+    }
+   ],
    "source": []
   },
   {
