--- a/src/redfin_scrapper.ipynb
+++ b/src/redfin_scrapper.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-05T21:45:59.110719Z",
-     "start_time": "2018-10-05T21:45:59.094875Z"
+     "end_time": "2018-10-06T03:25:09.133630Z",
+     "start_time": "2018-10-06T03:25:09.116520Z"
     }
    },
    "outputs": [],
@@ -30,29 +30,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-05T21:45:59.419147Z",
-     "start_time": "2018-10-05T21:45:59.405279Z"
+     "end_time": "2018-10-06T03:25:10.989456Z",
+     "start_time": "2018-10-06T03:25:10.974890Z"
     },
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "ua = user_agent_list\n",
     "proxies = proxies_list_\n",
     "prx_pool = proxie_random_pool\n",
-    "proxie_check(proxies)"
+    "# proxie_check(proxies)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-05T22:26:41.178193Z",
-     "start_time": "2018-10-05T22:26:41.163440Z"
+     "end_time": "2018-10-06T03:25:12.741838Z",
+     "start_time": "2018-10-06T03:25:12.723794Z"
     },
     "scrolled": true
    },
@@ -60,10 +60,10 @@
     {
      "data": {
       "text/plain": [
-       "3"
+       "66"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
