--- a/src/redfin_scrapper.ipynb
+++ b/src/redfin_scrapper.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-06T03:25:09.133630Z",
-     "start_time": "2018-10-06T03:25:09.116520Z"
+     "end_time": "2018-10-06T23:40:37.494362Z",
+     "start_time": "2018-10-06T23:40:37.470949Z"
     }
    },
    "outputs": [],
@@ -30,29 +30,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-06T03:25:10.989456Z",
-     "start_time": "2018-10-06T03:25:10.974890Z"
+     "end_time": "2018-10-06T23:40:37.982910Z",
+     "start_time": "2018-10-06T23:40:37.963286Z"
     },
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "ua = user_agent_list\n",
     "proxies = proxies_list_\n",
     "prx_pool = proxie_random_pool\n",
-    "# proxie_check(proxies)"
+    "#proxie_check(proxies)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-06T03:25:12.741838Z",
-     "start_time": "2018-10-06T03:25:12.723794Z"
+     "end_time": "2018-10-06T23:40:38.981996Z",
+     "start_time": "2018-10-06T23:40:38.968069Z"
     },
     "scrolled": true
    },
@@ -60,10 +60,10 @@
     {
      "data": {
       "text/plain": [
-       "66"
+       "44"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
