--- a/src/redfin_scrapper.ipynb
+++ b/src/redfin_scrapper.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-06T23:40:37.494362Z",
-     "start_time": "2018-10-06T23:40:37.470949Z"
+     "end_time": "2018-10-07T18:54:01.995586Z",
+     "start_time": "2018-10-07T18:54:01.973589Z"
     }
    },
    "outputs": [],
@@ -30,11 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-06T23:40:37.982910Z",
-     "start_time": "2018-10-06T23:40:37.963286Z"
+     "end_time": "2018-10-07T18:54:02.170121Z",
+     "start_time": "2018-10-07T18:54:02.155437Z"
     },
     "scrolled": false
    },
@@ -43,16 +43,16 @@
     "ua = user_agent_list\n",
     "proxies = proxies_list_\n",
     "prx_pool = proxie_random_pool\n",
-    "proxie_check(proxies)"
+    "#proxie_check(proxies)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-06T23:40:38.981996Z",
-     "start_time": "2018-10-06T23:40:38.968069Z"
+     "end_time": "2018-10-07T18:54:02.684634Z",
+     "start_time": "2018-10-07T18:54:02.668388Z"
     },
     "scrolled": true
    },
@@ -60,10 +60,10 @@
     {
      "data": {
       "text/plain": [
-       "44"
+       "68"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
