--- a/src/Main_prog.ipynb
+++ b/src/Main_prog.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-08T18:37:52.967989Z",
-     "start_time": "2018-10-08T18:37:52.947732Z"
+     "end_time": "2018-10-09T21:52:54.527919Z",
+     "start_time": "2018-10-09T21:52:53.723367Z"
     }
    },
    "outputs": [],
@@ -34,11 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-08T18:37:55.875779Z",
-     "start_time": "2018-10-08T18:37:53.597820Z"
+     "end_time": "2018-10-09T21:52:57.963759Z",
+     "start_time": "2018-10-09T21:52:55.312936Z"
     }
    },
    "outputs": [
@@ -46,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input the Redfin URL of the Home: https://www.redfin.com/TX/Haslet/1009-Morton-Hill-Ln-76052/home/32449755\n"
+      "Input the Redfin URL of the Home: https://www.redfin.com/CA/Fremont/4464-Bidwell-Dr-94538/home/1059041\n"
      ]
     }
    ],
@@ -56,11 +56,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-08T18:38:11.355272Z",
-     "start_time": "2018-10-08T18:38:10.044162Z"
+     "end_time": "2018-10-09T21:52:59.898212Z",
+     "start_time": "2018-10-09T21:52:58.653040Z"
     }
    },
    "outputs": [
@@ -68,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.redfin.com/TX/Haslet/1009-Morton-Hill-Ln-76052/home/32449755\n"
+      "https://www.redfin.com/CA/Fremont/4464-Bidwell-Dr-94538/home/1059041\n"
      ]
     }
    ],
@@ -83,25 +83,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-08T18:38:12.162645Z",
-     "start_time": "2018-10-08T18:38:11.939757Z"
+     "end_time": "2018-10-09T21:53:00.583098Z",
+     "start_time": "2018-10-09T21:53:00.397851Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/guess/apt-get-home/src/PARSER_FUNCTIONS.py:308: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
+      "  all_dict = df.to_dict()\n"
+     ]
+    }
+   ],
    "source": [
     "customer_df = info_from_property(soup)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-08T18:38:12.954270Z",
-     "start_time": "2018-10-08T18:38:12.927670Z"
+     "end_time": "2018-10-09T21:53:01.257153Z",
+     "start_time": "2018-10-09T21:53:01.231730Z"
     }
    },
    "outputs": [],
@@ -111,21 +120,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-08T18:38:13.835511Z",
-     "start_time": "2018-10-08T18:38:13.811569Z"
+     "end_time": "2018-10-09T21:53:02.025163Z",
+     "start_time": "2018-10-09T21:53:02.006574Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://www.redfin.com/zipcode/76052/filter/sort=lo-days,property-type=house,min-baths=2,min-sqft=2.5k-sqft,max-sqft=3.5k-sqft,min-year-built=1980,max-year-built=2010,min-lot-size=0.25-acre,max-lot-size=3-acre,hoa=100'"
+       "'https://www.redfin.com/zipcode/94538/filter/sort=lo-days,min-price=850k,max-price=1.25M,min-baths=1.25,min-sqft=1k-sqft,max-sqft=1.25k-sqft,min-year-built=1930,max-year-built=1970,min-lot-size=2k-sqft,max-lot-size=0.25-acre'"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,11 +145,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-08T18:38:15.543229Z",
-     "start_time": "2018-10-08T18:38:14.694339Z"
+     "end_time": "2018-10-09T21:53:03.296894Z",
+     "start_time": "2018-10-09T21:53:02.721755Z"
     }
    },
    "outputs": [
@@ -148,11 +157,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "108.170.48.187:3128\n",
-      "Found 20 properties\n",
-      "Here are top two homes out of 20:\n",
-      "Home # 1: https://www.redfin.com/TX/Haslet/509-Birchwood-Ln-76052/home/32449549\n",
-      "Home # 2: https://www.redfin.com/TX/Haslet/948-Chalk-Hill-Ln-76052/home/32449829\n"
+      "47.157.73.215:80\n",
+      "Found 6 properties\n",
+      "Here are top two homes out of 6:\n",
+      "Home # 1: https://www.redfin.com/CA/Fremont/4543-Val-St-94538/home/860317\n",
+      "Home # 2: https://www.redfin.com/CA/Fremont/5164-Trade-Wind-Ln-94538/home/1124392\n"
      ]
     }
    ],
