trying new scrapper to get data from Zillow

--- a/src/Not in use/old_scraper.ipynb
+++ b/src/Not in use/old_scraper.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-09-27T05:57:58.955355Z",
-     "start_time": "2018-09-27T05:57:58.940067Z"
+     "end_time": "2018-10-11T23:19:49.899921Z",
+     "start_time": "2018-10-11T23:19:49.357552Z"
     }
    },
    "outputs": [],
@@ -102,11 +102,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-09-27T18:47:26.497721Z",
-     "start_time": "2018-09-27T18:47:26.483159Z"
+     "end_time": "2018-10-12T02:22:09.321820Z",
+     "start_time": "2018-10-12T02:22:09.303567Z"
     }
    },
    "outputs": [],
@@ -119,7 +119,8 @@
     "        print(i+1)\n",
     "        start_time = time.time()\n",
     "        try:\n",
-    "            response = requests.get(url, proxies={\"http\": proxy, \"https\": proxy})\n",
+    "            response = requests.get(\n",
+    "                url, proxies={\"http\": proxy, \"https\": proxy})\n",
     "            print(response.json())\n",
     "            print(time.time() - start_time)\n",
     "        except:\n",
@@ -286,7 +287,9 @@
     "        return prp_list, url_pool\n",
     "    return prp_list, url_pool\n",
     "\n",
-    "over_prp_list, url_pool = areas_extractor_url(proxies, over_prp_list, url_pool, ua)"
+    "\n",
+    "over_prp_list, url_pool = areas_extractor_url(\n",
+    "    proxies, over_prp_list, url_pool, ua)"
    ]
   },
   {
@@ -310,11 +313,11 @@
     }
    ],
    "source": [
-    "def areas_extractor(areas_pool, proxies, prp_list, ua):    \n",
+    "def areas_extractor(areas_pool, proxies, prp_list, ua):\n",
     "    proxy = random.sample(proxies, 1)[0]\n",
     "    print(proxies.index(proxy))\n",
     "    print(proxy)\n",
-    "    for num in areas_pool:        \n",
+    "    for num in areas_pool:\n",
     "        url = 'https://www.zillow.com/homes/for_sale/'+num + \\\n",
     "            '/fsba,fore,new,cmsn_lt/house,condo,apartment_duplex,townhouse_type/1-_baths/20000-_price/82-_mp/12m_days/1_pnd/1_rs/'\n",
     "        try:\n",
@@ -333,6 +336,7 @@
     "            print(len(proxies))\n",
     "            return prp_list, areas_pool, proxies\n",
     "    return prp_list, areas_pool, proxies\n",
+    "\n",
     "\n",
     "prp_list, rand_areas_list, proxies = areas_extractor(\n",
     "    rand_areas_list, proxies, prp_list, ua)"
@@ -399,6 +403,7 @@
     "    all_pages = [ceil(num/25) for num in df['all_homes']]\n",
     "    df['all_pages'] = all_pages\n",
     "    return df\n",
+    "\n",
     "\n",
     "df_all = create_df_num_homes(prp_list)\n",
     "df_over_five = create_df_num_homes(over_prp_list)"
@@ -651,13 +656,14 @@
     "        return url_list, main_df, proxies\n",
     "    return url_list, main_df, proxies\n",
     "\n",
+    "\n",
     "#url_list, main_df, proxies = create_df(proxies, url_list, main_df, ua)\n",
     "# url_list_over, main_df, proxies = create_df(proxies, url_list_over, main_df, ua)\n",
     "li = []\n",
-    "i=0\n",
-    "while i<50000:\n",
-    "    li.append(random.uniform(0,1)*5)\n",
-    "    i-=1\n",
+    "i = 0\n",
+    "while i < 50000:\n",
+    "    li.append(random.uniform(0, 1)*5)\n",
+    "    i -= 1\n",
     "li.average()"
    ]
   },
@@ -908,6 +914,7 @@
    "source": [
     "url = random.sample(url_list_from_main_df, 1)[0]\n",
     "\n",
+    "\n",
     "def each_property(url, hdr, proxy):\n",
     "    session = requests.Session()\n",
     "    session.proxies = {\"http\": proxy, \"https\": proxy}\n",
@@ -920,15 +927,15 @@
     "    print(home_address_MLS)\n",
     "\n",
     "    home_full_feat_desc = soup.findAll('span', {'class': 'hdp-fact-name'})\n",
-    "    if len(home_full_feat_desc)==0:\n",
+    "    if len(home_full_feat_desc) == 0:\n",
     "        home_full_feat_desc = soup.findAll('span', {'class': 'fact-name'})\n",
     "    for desc in home_full_feat_desc:\n",
-    "        #print(desc.contents[0])\n",
+    "        # print(desc.contents[0])\n",
     "        homefeat_desc.append(str(desc.contents[0]))\n",
     "\n",
     "    home_full_feat_info = soup.findAll('span', {'class': 'hdp-fact-value'})\n",
     "    for info in home_full_feat_info:\n",
-    "        #print(info.contents[0])\n",
+    "        # print(info.contents[0])\n",
     "        homefeat_info.append(str(info.contents[0]))\n",
     "\n",
     "    new_dict = dict(zip(homefeat_desc, homefeat_info))\n",
@@ -955,7 +962,7 @@
     "    school_rating = soup.findAll('div', {'class': 'nearby-schools-rating'})\n",
     "    for rating in school_rating:\n",
     "        print(rating.span.text)\n",
-    "        \n",
+    "\n",
     "    school_name_regex = r'school-name notranslate$'\n",
     "    school_name = soup.findAll('a', {'class': 'school-name notranslate'})\n",
     "    for mane in school_name:\n",
@@ -1035,20 +1042,6 @@
     "print(proxy)\n",
     "each_property(url, header, proxy)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
