--- a/src/Testing_new_scrapper.ipynb
+++ b/src/Testing_new_scrapper.ipynb
@@ -34,11 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 105,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-13T22:17:37.462526Z",
-     "start_time": "2018-10-13T22:17:37.446565Z"
+     "end_time": "2018-10-14T17:39:33.738514Z",
+     "start_time": "2018-10-14T17:39:33.719938Z"
     }
    },
    "outputs": [],
@@ -66,15 +66,379 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 106,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-13T22:17:41.630593Z",
-     "start_time": "2018-10-13T22:17:41.614576Z"
+     "end_time": "2018-10-14T23:55:41.820012Z",
+     "start_time": "2018-10-14T17:39:35.257556Z"
     },
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "{'origin': '12.183.155.91'}\n",
+      "0.6499526500701904\n",
+      "[]\n",
+      "2\n",
+      "{'origin': '12.2.202.242'}\n",
+      "1.2542219161987305\n",
+      "[]\n",
+      "3\n",
+      "{'origin': '50.224.173.189'}\n",
+      "0.6214709281921387\n",
+      "[]\n",
+      "4\n",
+      "{'origin': '12.175.211.121'}\n",
+      "19.52790856361389\n",
+      "[]\n",
+      "5\n",
+      "{'origin': '71.43.26.18'}\n",
+      "16.37223482131958\n",
+      "[]\n",
+      "6\n",
+      "{'origin': '72.35.40.34'}\n",
+      "0.8216462135314941\n",
+      "[]\n",
+      "7\n",
+      "{'origin': '50.224.173.189'}\n",
+      "0.5283527374267578\n",
+      "[]\n",
+      "8\n",
+      "{'origin': '24.227.222.4'}\n",
+      "4.961645603179932\n",
+      "[]\n",
+      "9\n",
+      "{'origin': '64.58.200.50'}\n",
+      "67.02090334892273\n",
+      "[]\n",
+      "10\n",
+      "Skipping. Connnection error\n",
+      "0.19135522842407227\n",
+      "[10]\n",
+      "11\n",
+      "{'origin': '172.83.138.45'}\n",
+      "9.981476783752441\n",
+      "[10]\n",
+      "12\n",
+      "{'origin': '72.95.19.165'}\n",
+      "19.648171424865723\n",
+      "[10]\n",
+      "13\n",
+      "{'origin': '65.173.110.234'}\n",
+      "29.676659107208252\n",
+      "[10]\n",
+      "14\n",
+      "{'origin': '162.236.204.234'}\n",
+      "1.9412717819213867\n",
+      "[10]\n",
+      "15\n",
+      "{'origin': '47.210.133.169'}\n",
+      "3.694734573364258\n",
+      "[10]\n",
+      "16\n",
+      "{'origin': '64.214.77.66'}\n",
+      "0.9792952537536621\n",
+      "[10]\n",
+      "17\n",
+      "Skipping. Connnection error\n",
+      "32.05974888801575\n",
+      "[10, 17]\n",
+      "18\n",
+      "{'origin': '73.0.14.154'}\n",
+      "3.8840532302856445\n",
+      "[10, 17]\n",
+      "19\n",
+      "Skipping. Connnection error\n",
+      "0.07146239280700684\n",
+      "[10, 17, 19]\n",
+      "20\n",
+      "Skipping. Connnection error\n",
+      "0.09152007102966309\n",
+      "[10, 17, 19, 20]\n",
+      "21\n",
+      "Skipping. Connnection error\n",
+      "0.048554182052612305\n",
+      "[10, 17, 19, 20, 21]\n",
+      "22\n",
+      "Skipping. Connnection error\n",
+      "0.08373165130615234\n",
+      "[10, 17, 19, 20, 21, 22]\n",
+      "23\n",
+      "{'origin': '50.224.173.189'}\n",
+      "0.5497632026672363\n",
+      "[10, 17, 19, 20, 21, 22]\n",
+      "24\n",
+      "Skipping. Connnection error\n",
+      "129.6247000694275\n",
+      "[10, 17, 19, 20, 21, 22, 24]\n",
+      "25\n",
+      "{'origin': '52.144.107.142'}\n",
+      "6.668394088745117\n",
+      "[10, 17, 19, 20, 21, 22, 24]\n",
+      "26\n",
+      "Skipping. Connnection error\n",
+      "0.04128265380859375\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26]\n",
+      "27\n",
+      "{'origin': '204.249.203.201'}\n",
+      "2.5484795570373535\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26]\n",
+      "28\n",
+      "{'origin': '66.208.101.138'}\n",
+      "2.930487632751465\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26]\n",
+      "29\n",
+      "{'origin': '173.162.101.209'}\n",
+      "35.38600420951843\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26]\n",
+      "30\n",
+      "{'origin': '50.252.132.229'}\n",
+      "2.372086763381958\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26]\n",
+      "31\n",
+      "{'origin': '12.218.209.130'}\n",
+      "25.321781635284424\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26]\n",
+      "32\n",
+      "Skipping. Connnection error\n",
+      "22140.14213681221\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32]\n",
+      "33\n",
+      "Skipping. Connnection error\n",
+      "0.08418393135070801\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33]\n",
+      "34\n",
+      "Skipping. Connnection error\n",
+      "1.701287031173706\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34]\n",
+      "35\n",
+      "Skipping. Connnection error\n",
+      "0.7750999927520752\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35]\n",
+      "36\n",
+      "Skipping. Connnection error\n",
+      "0.17812466621398926\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36]\n",
+      "37\n",
+      "Skipping. Connnection error\n",
+      "0.15898442268371582\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37]\n",
+      "38\n",
+      "Skipping. Connnection error\n",
+      "0.14468026161193848\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38]\n",
+      "39\n",
+      "Skipping. Connnection error\n",
+      "0.15199065208435059\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39]\n",
+      "40\n",
+      "Skipping. Connnection error\n",
+      "0.13095664978027344\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40]\n",
+      "41\n",
+      "Skipping. Connnection error\n",
+      "0.1541600227355957\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41]\n",
+      "42\n",
+      "Skipping. Connnection error\n",
+      "0.13255667686462402\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42]\n",
+      "43\n",
+      "Skipping. Connnection error\n",
+      "0.1548323631286621\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43]\n",
+      "44\n",
+      "Skipping. Connnection error\n",
+      "0.13088107109069824\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44]\n",
+      "45\n",
+      "Skipping. Connnection error\n",
+      "0.15289092063903809\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45]\n",
+      "46\n",
+      "Skipping. Connnection error\n",
+      "0.13793134689331055\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46]\n",
+      "47\n",
+      "Skipping. Connnection error\n",
+      "0.1363842487335205\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47]\n",
+      "48\n",
+      "Skipping. Connnection error\n",
+      "0.15689325332641602\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48]\n",
+      "49\n",
+      "Skipping. Connnection error\n",
+      "0.1481311321258545\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49]\n",
+      "50\n",
+      "Skipping. Connnection error\n",
+      "0.15257549285888672\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50]\n",
+      "51\n",
+      "Skipping. Connnection error\n",
+      "0.1283869743347168\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51]\n",
+      "52\n",
+      "Skipping. Connnection error\n",
+      "0.157181978225708\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52]\n",
+      "53\n",
+      "Skipping. Connnection error\n",
+      "0.09195280075073242\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53]\n",
+      "54\n",
+      "Skipping. Connnection error\n",
+      "0.05859231948852539\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54]\n",
+      "55\n",
+      "Skipping. Connnection error\n",
+      "0.1417551040649414\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55]\n",
+      "56\n",
+      "Skipping. Connnection error\n",
+      "0.10361742973327637\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56]\n",
+      "57\n",
+      "Skipping. Connnection error\n",
+      "0.05154991149902344\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57]\n",
+      "58\n",
+      "Skipping. Connnection error\n",
+      "0.10572385787963867\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58]\n",
+      "59\n",
+      "Skipping. Connnection error\n",
+      "0.02649378776550293\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59]\n",
+      "60\n",
+      "Skipping. Connnection error\n",
+      "0.10175013542175293\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60]\n",
+      "61\n",
+      "Skipping. Connnection error\n",
+      "0.03351950645446777\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61]\n",
+      "62\n",
+      "Skipping. Connnection error\n",
+      "0.08055281639099121\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62]\n",
+      "63\n",
+      "Skipping. Connnection error\n",
+      "0.08088850975036621\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63]\n",
+      "64\n",
+      "Skipping. Connnection error\n",
+      "0.15224838256835938\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64]\n",
+      "65\n",
+      "Skipping. Connnection error\n",
+      "0.08266568183898926\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65]\n",
+      "66\n",
+      "Skipping. Connnection error\n",
+      "0.04900074005126953\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66]\n",
+      "67\n",
+      "Skipping. Connnection error\n",
+      "0.042963504791259766\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67]\n",
+      "68\n",
+      "Skipping. Connnection error\n",
+      "0.07796621322631836\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68]\n",
+      "69\n",
+      "Skipping. Connnection error\n",
+      "0.00824594497680664\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69]\n",
+      "70\n",
+      "Skipping. Connnection error\n",
+      "0.15427827835083008\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70]\n",
+      "71\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping. Connnection error\n",
+      "0.15874910354614258\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71]\n",
+      "72\n",
+      "Skipping. Connnection error\n",
+      "0.1010744571685791\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72]\n",
+      "73\n",
+      "Skipping. Connnection error\n",
+      "0.045256853103637695\n",
+      "[10, 17, 19, 20, 21, 22, 24, 26, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[10,\n",
+       " 17,\n",
+       " 19,\n",
+       " 20,\n",
+       " 21,\n",
+       " 22,\n",
+       " 24,\n",
+       " 26,\n",
+       " 32,\n",
+       " 33,\n",
+       " 34,\n",
+       " 35,\n",
+       " 36,\n",
+       " 37,\n",
+       " 38,\n",
+       " 39,\n",
+       " 40,\n",
+       " 41,\n",
+       " 42,\n",
+       " 43,\n",
+       " 44,\n",
+       " 45,\n",
+       " 46,\n",
+       " 47,\n",
+       " 48,\n",
+       " 49,\n",
+       " 50,\n",
+       " 51,\n",
+       " 52,\n",
+       " 53,\n",
+       " 54,\n",
+       " 55,\n",
+       " 56,\n",
+       " 57,\n",
+       " 58,\n",
+       " 59,\n",
+       " 60,\n",
+       " 61,\n",
+       " 62,\n",
+       " 63,\n",
+       " 64,\n",
+       " 65,\n",
+       " 66,\n",
+       " 67,\n",
+       " 68,\n",
+       " 69,\n",
+       " 70,\n",
+       " 71,\n",
+       " 72,\n",
+       " 73]"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def proxie_check(proxies):\n",
     "    default_list = []\n",
@@ -94,16 +458,16 @@
     "            print(time.time() - start_time)\n",
     "        print(default_list)\n",
     "    return default_list\n",
-    "#proxie_check(proxies)"
+    "proxie_check(proxies)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 104,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-13T22:17:43.304621Z",
-     "start_time": "2018-10-13T22:17:43.289326Z"
+     "end_time": "2018-10-14T17:39:31.448340Z",
+     "start_time": "2018-10-14T17:39:31.431662Z"
     }
    },
    "outputs": [
@@ -113,7 +477,7 @@
        "73"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
