Updating functions information

--- a/src/Tester_file.ipynb
+++ b/src/Tester_file.ipynb
@@ -168,6 +168,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
@@ -188,6 +195,49 @@
     "my_string=\"Public - Preschool to 5\"\n",
     "print(my_string.split(' - ',1)[1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-20T21:22:59.907917Z",
+     "start_time": "2018-10-20T21:22:59.888736Z"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-20T21:21:32.043765Z",
+     "start_time": "2018-10-20T21:21:32.028491Z"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-20T21:23:27.096454Z",
+     "start_time": "2018-10-20T21:23:27.064421Z"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
