All information within functions

--- a/src/Main_prog.ipynb
+++ b/src/Main_prog.ipynb
@@ -1,12 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Apt-Get-Home"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-09T21:52:54.527919Z",
-     "start_time": "2018-10-09T21:52:53.723367Z"
+     "end_time": "2018-10-22T16:06:09.656199Z",
+     "start_time": "2018-10-22T16:06:09.635588Z"
     }
    },
    "outputs": [],
@@ -22,22 +29,22 @@
     "from itertools import cycle\n",
     "from header_list import user_agent_list\n",
     "from proxies_list import proxies_list_\n",
-    "from INITIAL_SCRAPPER_FUNCTIONS import *\n",
-    "from PARSER_FUNCTIONS import *\n",
-    "from LIST_DF_FUNCTIONS import *\n",
-    "from SEARCH_URL_GEN import *\n",
-    "from GET_SEARCH_URL import *\n",
-    "from GET_RESULTS import *\n",
+    "from initial_scrapper_function import *\n",
+    "from parser_functions import *\n",
+    "from list_df_functions import *\n",
+    "from search_url_gen import *\n",
+    "from get_search_url import *\n",
+    "from get_results import *\n",
     "ua = user_agent_list\n",
     "proxies = proxies_list_"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## This asks user to input the url for the home they are interested in"
+   ]
   },
   {
    "cell_type": "code",
@@ -59,6 +66,13 @@
    ],
    "source": [
     "customer_url = input(\"Input the Redfin URL of the Home: \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This creates the user session and gets information from the url"
    ]
   },
   {
@@ -89,13 +103,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Input all the information from the property in a dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-10-09T21:53:00.583098Z",
      "start_time": "2018-10-09T21:53:00.397851Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -109,6 +131,13 @@
    ],
    "source": [
     "customer_df = info_from_property(soup)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a search URL matching criteria of the home "
    ]
   },
   {
@@ -126,28 +155,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-09T21:53:02.025163Z",
-     "start_time": "2018-10-09T21:53:02.006574Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://www.redfin.com/zipcode/94538/filter/sort=lo-days,min-price=850k,max-price=1.25M,min-baths=1.25,min-sqft=1k-sqft,max-sqft=1.25k-sqft,min-year-built=1930,max-year-built=1970,min-lot-size=2k-sqft,max-lot-size=0.25-acre'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "c_url"
+    "## Create another session to run the search"
    ]
   },
   {
@@ -179,13 +190,6 @@
     "soup = session_creator(ua, c_url)\n",
     "get_results(soup, customer_df)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
